# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: pyci.yml  python-ci.yml
page_analyzer/: __init__.py  analyzer.py  checker.py  errors.py  main.py  parser.py  repository.py  routes.py  services.py  url_service.py  urls.py  validator.py
page_analyzer/templates/: index.html  layout.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/urls/: index.html  show.html
templates/: index.html  layout.html  show.html
templates/urls/: index.html  show.html
